re PR objc/18408 (ICE compiling code that involves casting classes)

2005-01-25  Alexander Malmberg  <alexander@malmberg.org>

        PR objc/18408
        * objc-act.c (objc_types_compatible_p): New function.
        * objc-act.h (objc_types_compatible_p): Declare.
        * objc-lang.c (LANG_HOOKS_TYPES_COMPATIBLE_P): Define.

From-SVN: r94199